--- a/src/popup.html
+++ b/src/popup.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HireHack - Auto Apply</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      min-width: 300px;
-      min-height: 400px;
-    }
-  </style>
-</head>
-<body>
-  <script type="module" src="popup.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HireHack - Auto Apply</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        min-width: 300px;
+        min-height: 400px;
+      }
+    </style>
+  </head>
+  <body>
+    <script type="module" src="popup.js"></script>
+  </body>
 </html>
