--- a/src/popup.html
+++ b/src/popup.html
@@ -14,6 +14,7 @@
     </style>
   </head>
   <body>
-    <script type="module" src="popup.js"></script>
+    <!-- <script type="module" src="popup.js"></script> -->
+    <script src="popup.js"></script>
   </body>
 </html>
